<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_calender_event"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarEvent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivAddEvent"
        android:layout_gravity="center_horizontal|bottom"
        android:baselineAlignBottom="true"
        android:src="@drawable/baseline_add_24"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/add_event" />

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvEventCreate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:text="@string/create_calendar_event"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/event_title"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvEventCreate"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="AUTOFILL_TYPE_NONE" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:minHeight="40dp"
        android:text="@string/start_time_"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:minWidth="150dp"
        android:minHeight="40dp"
        android:text="@string/end_time_"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvStartTime"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:minWidth="150dp"
        android:minHeight="40dp"
        android:text="@string/event_date"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvEndTime"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:id="@+id/ivStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/baseline_access_time_24"
        app:layout_constraintStart_toEndOf="@id/tvStartTime"
        app:layout_constraintTop_toTopOf="@id/tvStartTime"
        android:contentDescription="@string/add_event_start_time" />
    <ImageView
        android:id="@+id/ivEmdTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/baseline_access_time_24"
        app:layout_constraintStart_toEndOf="@id/tvEndTime"
        app:layout_constraintTop_toTopOf="@id/tvEndTime"
        android:contentDescription="@string/add_event_end_time" />

    <ImageView
        android:id="@+id/ivDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/baseline_date_range_24"
        app:layout_constraintStart_toEndOf="@id/tvDate"
        app:layout_constraintTop_toTopOf="@id/tvDate"
        android:contentDescription="@string/add_event_date" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/event_location"
        app:layout_constraintTop_toBottomOf="@id/cbAllDay"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="text" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="text"
        android:hint="@string/event_description"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etLocation"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="text" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textEmailAddress"
        android:minWidth="300dp"
        android:hint="@string/enter_attendee_email"
        android:autofillHints="emailAddress"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/ivAddEmail"
        app:layout_constraintBottom_toBottomOf="@id/ivRemove"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:id="@+id/ivAddEmail"
        android:src="@drawable/baseline_add_card_24"
        app:layout_constraintStart_toEndOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/etDescription"
        app:layout_constraintBottom_toTopOf="@id/ivRemove"
        android:contentDescription="@string/add_email_to_email_list" />

    <ImageView
        android:id="@+id/ivRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/etEmail"
        app:layout_constraintBottom_toBottomOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/ivAddEmail"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        android:src="@drawable/baseline_clear_24"
        android:contentDescription="@string/remove_email_from_email_list" />

    <TextView
        android:id="@+id/tvEmailList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:text="@string/attendee_s_list_n"
        app:layout_constraintTop_toBottomOf="@id/swAccessType"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/cbAllDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/all_day_event"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/swAccessType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:minHeight="48dp"
        android:text="@string/private_event"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>