<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_phone_event"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneEvent">

  <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        >

      <TextView
          android:id="@+id/tvTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:text="@string/phone_call_and_sms_message"
          android:textStyle="bold"
          android:textSize="30sp"
          />

      <EditText
          android:id="@+id/etPhoneNumber"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="phone"
          android:textSize="20sp"
          android:hint="@string/enter_phone_number"
          app:layout_constraintTop_toBottomOf="@id/tvTitle"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:backgroundTint="@color/cardview_dark_background"
          android:layout_margin="8dp"
          android:autofillHints="phone" />

      <EditText
          android:id="@+id/etSMS"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textLongMessage"
          android:textSize="20sp"
          android:hint="@string/enter_sms_message"
          android:backgroundTint="@color/cardview_dark_background"
          app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_margin="8dp"
          />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivPhone"
            android:layout_gravity="center_horizontal|bottom"
            android:baselineAlignBottom="true"
            android:src="@drawable/baseline_call_24"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivSMS"
            android:contentDescription="@string/make_phone_call" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivSMS"
            android:layout_gravity="center_horizontal|bottom"
            android:baselineAlignBottom="true"
            android:src="@drawable/baseline_chat_bubble_24"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivPhone"
            android:contentDescription="@string/send_sms_message" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>